[package]
name = "uqoin-core"
version = "0.1.2"
edition = "2024"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/uqoin-core"
description = "Core algorithms that implement Uqoin protocol in Rust."

[dependencies]
bip39 = "2.1.0"
finitelib = { version = "0.1.13", features = ["serde"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"], optional = true }
lbasedb = { version = "0.1.7", optional = true }

[features]
blockchain = ["dep:tokio", "dep:lbasedb"]
